# kraal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  crawl.cpp  paracrawler.cpp
include/: crawler.h  curl-http.h  html-extractor.h  http.h  link-extractor.h  page-getter.h  response.h  url.h
src/: crawler.cpp  curl-http.cpp  link-extractor.cpp  page-getter.cpp  url.cpp
test/: CMakeLists.txt  CrawlerTest.cpp  LinkExtractorTest.cpp  page-test.cpp  url-test.cpp
